--- a/client/src/components/styles/header.scss
+++ b/client/src/components/styles/header.scss
@@ -1,22 +1,18 @@
 header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  height: 420px;
-
-  .header-logo-box {
-    position: absolute;
+    position: fixed;
+    top: -410px;
     width: 100%;
+    height: 420px;
     z-index: -1;
-    .logo-img {
-      width: 100%;
+    border-radius: 10px;
+    .header-logo-box {
+        position: absolute;
+        width: 100%;
+        border-radius: 10px;
+        .logo-img {
+            width: 100%;
+            border-radius: 10px;
+            //filter: blur(1px); //블러효과
+        }
     }
-  }
-}
-main {
-  position: absolute;
-  background-color: white;
-  margin-top: 420px;
-  height: 1000px;
-  width: 100%;
 }
