--- a/client/src/components/styles/header.scss
+++ b/client/src/components/styles/header.scss
@@ -1,6 +1,5 @@
 header {
     position: fixed;
-    top: -410px;
     width: 100%;
     height: 420px;
     z-index: -1;
@@ -10,8 +9,10 @@ header {
         width: 100%;
         border-radius: 10px;
         .logo-img {
-            width: 100%;
             border-radius: 10px;
+            height: 420px;
+            width: 100%;
+            object-fit: cover;
             //filter: blur(1px); //블러효과
         }
     }
