--- a/client/src/components/styles/calender-modal.scss
+++ b/client/src/components/styles/calender-modal.scss
@@ -47,7 +47,6 @@
                         align-items: center;
                         justify-content: center;
                         font-size: 1.6rem;
-                        font-style: italic;
                         color: white;
                         padding: 15px;
                         background-color: #b7e6eb;
@@ -57,6 +56,12 @@
                 ul {
                     list-style: none;
                     font-size: 1.1rem;
+                    i {
+                        color: rgb(162, 223, 71);
+                        &.uncheck {
+                            color: rgb(228, 98, 98);
+                        }
+                    }
                 }
             }
         }
@@ -90,15 +95,16 @@
                     font-size: 1.5rem;
                     border-radius: 50%;
                     text-align: center;
+                    cursor: pointer;
                     &.sat {
                         color: rgb(112, 112, 214);
                     }
                     &.sun {
                         color: rgb(245, 126, 126);
                     }
-                    &.today {
-                        background-color: pink;
 
+                    &.focusDate {
+                        background-color: pink;
                         color: white;
                     }
                 }
