--- a/client/src/components/styles/calender-left.scss
+++ b/client/src/components/styles/calender-left.scss
@@ -1,47 +1,60 @@
+@import "../styles/global-color.scss";
 .calender-modal-left {
-    width: 50%;
-    background-color: pink;
+    width: 35%;
+    background-color: $green;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     padding: 15px;
     border-radius: 15px 0px 0px 15px;
     .calender-today-title {
+        height: 60%;
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
         font-size: 3rem;
         font-weight: 900;
-        width: 300px;
-        height: 300px;
+        width: 100%;
+        height: 348px;
         border-radius: 50%;
-        border: 5px dotted pink;
         background-color: white;
+        color: $green;
     }
     .calender-modal-left-bottom {
+        height: 40%;
         width: 100%;
         margin-top: 15px;
-        .perform-title {
-            span {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                font-size: 1.6rem;
-                color: white;
-                padding: 15px;
-                background-color: #b7e6eb;
-                border-radius: 15px;
-            }
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        .todo-title {
+            font-style: italic;
+            font-size: 1.6rem;
+            color: white;
+            font-weight: bold;
+            padding-bottom: 10px;
+            border-bottom: 1px solid $bwhite;
         }
         ul {
-            list-style: none;
             font-size: 1.1rem;
+            color: $bwhite;
+            font-weight: bold;
             i {
                 color: rgb(162, 223, 71);
                 &.uncheck {
                     color: rgb(228, 98, 98);
                 }
             }
+        }
+        .score-box {
+            padding: 5px;
+            border-radius: 10px;
+            position: absolute;
+            bottom: 0;
+            background-color: $dgreen;
+            color: $bwhite;
         }
     }
 }
