--- a/client/src/components/styles/calender-modal.scss
+++ b/client/src/components/styles/calender-modal.scss
@@ -12,7 +12,8 @@
         position: fixed;
         top: 50%;
         left: 50%;
-        width: 900px;
+        width: 1080px;
+        height: 720px;
         transform: translate(-50%, -50%);
         display: flex;
         justify-content: space-between;
