--- a/client/src/components/styles/calender-right.scss
+++ b/client/src/components/styles/calender-right.scss
@@ -1,13 +1,16 @@
+@import "./global-color.scss";
 .calender-modal-right {
-    width: 50%;
-    background-color: #9cdde4;
+    width: 65%;
+    background-color: white;
     border-radius: 0px 15px 15px 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    padding: 15px;
     .calender-current-year {
         font-size: 2rem;
+        height: 15%;
         color: #363636;
         display: flex;
         align-items: center;
@@ -19,15 +22,18 @@
     }
     table {
         width: 95%;
-        height: 370px;
+        height: 85%;
 
         th {
             font-size: 1.75rem;
+            vertical-align: middle;
         }
         td {
             font-size: 1.5rem;
             border-radius: 50%;
             text-align: center;
+            border-radius: 5px;
+            transition: background-color 0.2s ease-in-out;
             cursor: pointer;
             &.sat {
                 color: rgb(112, 112, 214);
@@ -35,9 +41,12 @@
             &.sun {
                 color: rgb(245, 126, 126);
             }
-
+            &:hover {
+                background-color: $graygreen;
+            }
             &.focusDate {
-                background-color: pink;
+                background-color: $green;
+                font-weight: bold;
                 color: white;
             }
         }
