--- a/client/src/components/styles/header.scss
+++ b/client/src/components/styles/header.scss
@@ -1,13 +1,16 @@
+@import "./global-color.scss";
 header {
     position: fixed;
     width: 100%;
     height: 420px;
     z-index: -1;
     border-radius: 10px;
+    background-color: $green;
     .header-logo-box {
         position: absolute;
         width: 100%;
         border-radius: 10px;
+
         .logo-img {
             border-radius: 10px;
             height: 420px;
