--- a/client/src/components/styles/global-color.scss
+++ b/client/src/components/styles/global-color.scss
@@ -4,6 +4,7 @@ $green: #6ce07a;
 $dgreen: #40af4d;
 $graygreen: #e0eee2;
 $bwhite: #f1f7f2;
-$lgray: #eef5ef;
+$lgray: #f0f0f0;
 $dgray: #525252;
 $bgray: #b1b1b1;
+$orange: #ffb62e;
